# pg_lens

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  PLAN_DISTRIBUTION.md  PRD.md  README.md  ROADMAP.md  nfpm.yaml
.claude/agents/: feature-discovery.md  lens-builder.md  qa-tester.md  release-manager.md
.github/workflows/: ci.yml  release.yml
crates/pg_lens_core/: Cargo.toml
crates/pg_lens_core/queries/: activity_post_130000.sql  activity_post_140000.sql  bgwriter_post_130000.sql  bgwriter_post_170000.sql  bloat_indexes.sql  bloat_tables.sql  blocking_post_140000.sql  databases.sql  db_stats_reset.sql  do_cancel_backend.sql  do_terminate_backend.sql  idle_sessions.sql  indexes.sql  lock_capacity.sql  prepared_xacts.sql  replication.sql  replication_slots.sql  server_info_post_130000.sql  statements.sql  statements_ext_1_11.sql  statements_ext_1_9.sql  table_stats_post_130000.sql  vacuum_cluster_age.sql  vacuum_progress.sql  vacuum_table_ages.sql  wal_receiver.sql
crates/pg_lens_core/src/: blocking.rs  db.rs  history.rs  history_store.rs  idle_sessions.rs  index_advisor.rs  lib.rs  lock_capacity.rs  models.rs  poller.rs  prepared_xacts.rs  queries.rs  remote_config.rs  schema_growth.rs  services.rs  settings.rs  waits.rs  xact_age.rs
crates/pg_lens_tui/: Cargo.toml
crates/pg_lens_tui/src/: app.rs  event.rs  main.rs  psql.rs
crates/pg_lens_tui/src/ui/: confirm.rs  db_picker.rs  format.rs  help.rs  index_lens.rs  macro_lens.rs  micro_lens.rs  mod.rs  picker.rs  query_lens.rs  replication.rs  replication_lens.rs  schema_lens.rs  splash.rs  sql.rs  style.rs  vacuum.rs
crates/pg_lens_web/: Cargo.toml  build.rs
crates/pg_lens_web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/pg_lens_web/frontend/src/: actions.ts  blocking.test.ts  blocking.ts  chart.ts  checkpointer.test.ts  checkpointer.ts  db_switcher.test.ts  db_switcher.ts  format.ts  icons.test.ts  icons.ts  idle_sessions.test.ts  idle_sessions.ts  index-advisor.test.ts  index-advisor.ts  keyboard.test.ts  keyboard.ts  lock_capacity.test.ts  lock_capacity.ts  main.ts  prepared_xacts.test.ts  prepared_xacts.ts  replication.test.ts  replication.ts  schema.test.ts  schema.ts  scrubber.test.ts  scrubber.ts  sql.test.ts  sql.ts  statements.test.ts  statements.ts  stream.ts  style.css  table.ts  theme.test.ts  theme.ts  trend.test.ts  trend.ts  types.ts  (+8 more)
crates/pg_lens_web/src/: lib.rs
docs/: connection-user.md  demo.tape
docs/archive/: PLAN.md  PLAN_CONNECTIONS.md  PLAN_SCHEMA_LENS.md
packaging/: pg-lens.lintian-overrides
scripts/: e2e_pty.py  e2e_pty_live.py  e2e_sse.mjs  gen_cask.sh  gen_formula.sh
