[workspace]
resolver = "2"
members = ["crates/*"]

# Shared package metadata, inherited by every crate via `field.workspace = true`.
[workspace.package]
version = "0.10.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dog-hero/pg_lens"
authors = ["Leonardo Benedet"]
rust-version = "1.87"

[profile.release]
strip = true
lto = "thin"
