[package]
name = "pg_lens_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Frontend-agnostic core for pg_lens: PostgreSQL poller, versioned system queries, and serializable snapshot models."
keywords = ["postgres", "postgresql", "monitoring", "observability", "database"]
categories = ["database"]
readme = "../../README.md"

[dependencies]
# "rc": DbSnapshot.schema is an Arc<SchemaSnapshot> (fast ticks reuse the
# last slow collection); serializing through the Arc is intentional.
serde = { version = "1.0.228", features = ["derive", "rc"] }
# Minimal feature set on purpose: the core only spawns the poller task ("rt"),
# publishes through watch channels ("sync"), sleeps between polls ("time"),
# and runs `password_cmd` via `sh -c` ("process", Fase C2).
tokio = { version = "1.52.3", features = ["macros", "process", "rt", "sync", "time"] }
tokio-postgres = "0.7.18"
# Services file parsing (Fase C2). Default features = "parse" + "serde".
toml = "1.1.2"
# History persistence as JSONL (Fase #25) and general (de)serialization.
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros"] }
