[package]
name = "pg_lens_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
pg_lens_core = { version = "0.1.0", path = "../pg_lens_core" }
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["full"] }
