[package]
name = "pg_lens_tui"
version = "0.4.0"
edition = "2024"

# The product (and installed binary) is `pg_lens`; the crate keeps its name.
[[bin]]
name = "pg_lens"
path = "src/main.rs"

[features]
# The `serve` subcommand (pg_lens_web's axum server) ships by default so the
# standard binary is the full product. TUI-only builds that want to skip the
# whole HTTP stack use `--no-default-features`: the `serve` subcommand is
# compiled out entirely (not stubbed), and cargo skips axum/hyper/tower.
default = ["web"]
web = ["dep:pg_lens_web"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
pg_lens_core = { version = "0.4.0", path = "../pg_lens_core" }
pg_lens_web = { version = "0.4.0", path = "../pg_lens_web", optional = true }
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
