[package]
name = "pg_lens_tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A blazing-fast, modern TUI (and web dashboard) for live PostgreSQL observability. Installs the `pg_lens` binary."
keywords = ["postgres", "postgresql", "monitoring", "tui", "database"]
categories = ["command-line-utilities", "database"]
readme = "../../README.md"

# The product (and installed binary) is `pg_lens`; the crate keeps its name.
[[bin]]
name = "pg_lens"
path = "src/main.rs"

# cargo-binstall: fetch the prebuilt release tarball instead of compiling.
# Matches the release.yml artifact naming (pg_lens-vX.Y.Z-<target>.tar.gz,
# binary at <dir>/pg_lens). Requires the crate published to crates.io.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/pg_lens-v{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "pg_lens-v{ version }-{ target }/pg_lens"

[features]
# The `serve` subcommand (pg_lens_web's axum server) ships by default so the
# standard binary is the full product. TUI-only builds that want to skip the
# whole HTTP stack use `--no-default-features`: the `serve` subcommand is
# compiled out entirely (not stubbed), and cargo skips axum/hyper/tower.
default = ["web"]
web = ["dep:pg_lens_web"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
pg_lens_core = { version = "0.14.0", path = "../pg_lens_core" }
pg_lens_web = { version = "0.14.0", path = "../pg_lens_web", optional = true }
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
